--- a/styles/architects.css
+++ b/styles/architects.css
@@ -122,6 +122,7 @@ align-items: center;
 .fact-container{
   display: grid;
   grid-template-columns: repeat(4,1fr);
+  gap:28px;
 }
 .fact-card{
   border: 1px solid #FF900E;
@@ -147,6 +148,25 @@ align-items: center;
 .fact-description{
   max-width: 540px;
 }
+
+
+/*sponsor related styles */
+
+.sponsor-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+}
+
+.sponsor-companies img{
+  filter:grayscale(100%)
+}  /*to make color picture gray*/
+
 /*responsive media query */
 @media screen and (max-width:576px) {
   .navbar, 
@@ -155,8 +175,19 @@ align-items: center;
     flex-direction: column;
   }
 
-  .team-img-container{
-    grid-template-columns: repeat(1,1fr);
+  .team-img-container,
+  .fact-container,
+  .sponsor-companies{
+    grid-template-columns: 1fr;
+  }
+  .fact-container {
+    justify-items: center;
+    gap: 24px;
+  }
+
+  .sponsor-companies{
+    justify-items: center;
+    gap: 50px;
   }
 
   .our-features{
@@ -172,5 +203,10 @@ align-items: center;
 
   .our-features{
     margin: 50px auto;
+  }
+  .sponsor-companies,.fact-container{
+    grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    justify-items: center;
   }
 }
