--- a/styles/architects.css
+++ b/styles/architects.css
@@ -143,6 +143,20 @@ align-items: center;
   margin-bottom: 0px;
   
 }
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+.featured-architect img{
+ width: 100%;
+}
 
 /*some fact related style */
 
@@ -194,10 +208,29 @@ align-items: center;
   filter:grayscale(100%)
 }  /*to make color picture gray*/
 
+/*footer*/
+.footer-text{
+  
+ font-size: 1.25rem;
+ padding-top: 39px;
+ 
+}
+.footer{
+  max-width: 1440px;
+  height: 100px;
+  text-align: center;
+  justify-content: center;
+  border-radius: 8px;
+  margin: 200px 230px;
+
+
+}
+
 /*responsive media query */
 @media screen and (max-width:576px) {
   .navbar, 
   .nav-link, 
+  .features,
   .teams{
     flex-direction: column;
   }
@@ -221,10 +254,15 @@ align-items: center;
     margin-left: 20px;
   }
 
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
 }
 /*medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
-  .teams{
+  .teams,.features{
     flex-direction: column;
   }
 
@@ -235,5 +273,10 @@ align-items: center;
     grid-template-columns: repeat(2,1fr);
     gap: 50px;
     justify-items: center;
+  }
+
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
